--- a/hello_world/hello_world.info.yml
+++ b/hello_world/hello_world.info.yml
@@ -2,4 +2,8 @@ name: Hello World
 description: Creates a page showing "Hello World".
 package: 'A Custom Modules'
 type: module
+core: 8.x
 core_version_requirement: ^8 || ^9
+dependencies:
+    - drupal:block
+    - drupal:node
