--- a/hello_world/hello_world.links.menu.yml
+++ b/hello_world/hello_world.links.menu.yml
@@ -4,5 +4,11 @@ hello_world.HelloWorld:
     weight: 1
     menu_name: main
 
+hello_world.simpleCustomForm:
+    title: 'Register'
+    route_name: hello_world.simpleCustomForm
+    weight: 2
+    menu_name: main
+
 
 # parent: system.admin_config
